BrmsWrapper/IngressController.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ocp-ingress-ng
  namespace: newgen
  annotations:
    route.openshift.io/termination: "edge" 
    haproxy.router.openshift.io/timeout: 3000s
    haproxy.router.openshift.io/balance: roundrobin
spec:
  rules:
  - host: newgenoneautomationstudio.apps.ocpintdev.lic-india.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: automationweb
            port:
              number: 8080
  - host: newgenoneworkspacestudio.apps.ocpintdev.lic-india.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: workspaceweb
            port:
              number: 8080
  - host: newgendmsrest.apps.ocpintdev.lic-india.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: od12websvc
            port:
              number: 8080
  - host: odmicroservices.apps.ocpintdev.lic-india.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: odspringcloudgateway
            port:
              number: 9000
  - host: ngonemicroservices.apps.ocpintdev.lic-india.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ngoneapigateway
            port:
              number: 8765
  - host: ngonebrmsmicroservices.apps.ocpintdev.lic-india.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ngoneapigatewaybrms
            port:
              number: 8765 
  - host: ngcustommicroservices.apps.ocpintdev.lic-india.com
    http:
      paths:
      - path: /Newgen
        pathType: Prefix
        backend:
          service:
            name: adddocument
            port:
              number: 8080 
      - path: /Newgen/Brms
        pathType: Prefix
        backend:
          service:
            name: licbrmswrapper
            port:
              number: 8080 
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ocp-ingress2
  namespace: newgen
  annotations:
    haproxy.router.openshift.io/timeout: 300s
    haproxy.router.openshift.io/balance: roundrobin
spec:
  rules:
  - host: automationstudioconsole.apps.ocpintdev.lic-india.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: automationejb
            port:
              number: 9990
  - host: workspacestudioconsole.apps.ocpintdev.lic-india.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: workspaceejb
            port:
              number: 9990
